annimon:stream必要なかったので削除